# kukari_pipeline

./: .gitignore  README.md
shotgrid_manager/: environment.yml  example_usage.py  main_spec.md  moc_data.py  pyproject.toml
shotgrid_manager/docs/: dependency_system_outline.md
shotgrid_manager/docs/shotgun_schemas/: asset_schema.txt  attachment_schema.txt  entity_types.txt  project_schema.txt  publishedfile_schema.txt  sequence_schema.txt  shot_schema.txt  step_schema.txt  task_schema.txt  task_template_schema.txt  user_schema.txt  version_schema.txt
shotgrid_manager/requirements/: base.txt  build.txt
shotgrid_manager/src/: main.py  main_window.py
shotgrid_manager/src/config/: specs.md
shotgrid_manager/src/core/: asset_manager.py  attachment_manager.py  authentication_manager.py  base_manager.py  dependency_resolver.py  download_service.py  file_manager.py  path_builder.py  production_tracking_instance.py  published_file_manager.py  publishing_service.py  shot_manager.py  shotgrid_instance.py  shotgun_instance.py  task_manager.py  user_manager.py  version_manger.py
shotgrid_manager/src/ui/: main_window.py
shotgrid_manager/src/ui/dialogs/: dependencies_dialog.py  publish_dialog.py
shotgrid_manager/src/ui/widgets/: extract_widgets.py  filter_toolbar_temp.txt  filter_toolbar_widget.py  kanban_task_board_widget.py  kanban_task_board_widget.py.backup  shotgrid_task_data_model.py  task_card_widget.py  task_column_widget.py  task_viewer_widget.py
shotgrid_manager/src/utils/: logger.py  progress_tracker.py  zip_utility.py
