[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shotgrid-manager"
version = "0.1.0"
authors = [
  { name="the_vfx_snake", email="thevfxsnake@gmail.com" },
]
description = "A pipeline tool for ShotGrid."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
